# Abuse_2025

./: .gitignore  AUTHORS  BUILDING.md  CMakeLists.txt  COPYING  NEWS  README.md  build.sh  vcpkg.json
data/: CMakeLists.txt  abuse.lsp
data/addon/: 00index.txt
data/addon/bgames/: bgames.lsp  checkers.lsp  checkers.lvl  chess.lsp  chess.lvl  chess.spe  connect4.lsp  connect4.lvl  othello.lsp  othello.lvl  pong.spe
data/addon/deathmat/: dstartup.lsp
data/addon/diffsens/: diffsens.lsp  diffsens.spe
data/addon/nextlev2/: nextlev2.lsp
data/addon/pong/: common.lsp
data/addon/quest/: main_map.spe  quest.lsp  quest.spe
data/lisp/: people.lsp  startup.lsp
data/music/: intro.mid
data/user/: config.txt
macos/: abuse.icns
src/: CMakeLists.txt  SDL_config.h  cache.cpp  clisp.cpp  common.h  cop.cpp  demo.cpp  dev.cpp  extend.cpp  extend.h  file_utils.cpp  file_utils.h  game.cpp  game.h  gamma.cpp  innet.cpp  intsect.cpp  level.cpp  light.cpp  loader2.cpp  loadgame.cpp  menu.cpp  netcfg.cpp  nfclient.cpp  nfserver.h  particle.cpp  property.cpp  specache.cpp  specache.h  view.cpp
src/imlib/: event.cpp  event.h  filesel.cpp  filter.h  fonts.h  guistat.cpp  image.cpp  include.cpp  input.cpp  jwindow.h  pcxread.cpp  pmenu.h  scroller.cpp  specs.cpp  specs.h  sprite.cpp
src/lisp/: CMakeLists.txt  lisp.cpp  lisp.h  lisp_gc.cpp  symbols.h  trig.cpp
src/lol/: matrix.cpp  matrix.h  timer.cpp
src/net/: CMakeLists.txt  fileman.cpp  gclient.cpp  gclient.h  gserver.cpp  netface.h  sock.cpp  sock.h  tcpip.cpp  tcpip.h
src/sdlport/: CMakeLists.txt  event.cpp  hmi.cpp  setup.cpp  setup.h  sound.cpp  sound.h  timing.cpp  video.cpp
vcpkg/triplets/community/: wasm32-emscripten.cmake
